@@ -1,4 +1,5 @@
 Development
+    libgmtk - gmtk_media_player, commit correct patch
     libgmtk - gmtk_media_player, handle +,-,#,., and j hotkeys
     libgmtk - gmtk_media_player, handle 1-8 keys for contrast, brightness, hue, and saturation
     libgmtk - gmtk_media_player, handle p and space keys for pausing
